# satysfi-amidakuji

./: .gitignore  README.md  Satyristes  satysfi-amidakuji-doc.opam  satysfi-amidakuji.opam
doc/: manual.saty
src/: amidakuji.satyh  amidakuji0.satyh
